Fix viewing long text on mobile

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -546,3 +546,7 @@ input.form-control.dark-mode {
     border-color: #4b7bb94b;
     color: white;
 }
+
+#main-content > p {
+    overflow-wrap: break-word;
+}
